--- a/src/ILICheck.Web/appsettings.json
+++ b/src/ILICheck.Web/appsettings.json
@@ -8,5 +8,8 @@
     "PathFormat": "Logs/application-{Date}.log",
     "PathFormatSession": "Logs/session-{SessionId}.log"
   },
-"AllowedHosts": "*"
+  "Upload": {
+    "PathFormat": "Upload/{FileName}"
+  },
+  "AllowedHosts": "*"
 }
