Add download controller to download mock log file

--- a/src/ILICheck.Web/ILICheck.Web.csproj
+++ b/src/ILICheck.Web/ILICheck.Web.csproj
@@ -27,6 +27,12 @@
     <None Remove="ClientApp\src\NewFile.txt" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Download\Mock_ilivalidator_log.xtf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
