Organize files in folder with unique name based on connectionId

--- a/src/ILICheck.Web/appsettings.json
+++ b/src/ILICheck.Web/appsettings.json
@@ -5,11 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     },
-    "PathFormat": "Logs/application-{Date}.log",
-    "PathFormatSession": "Logs/session-{SessionId}.log"
+    "PathFormat": "Logs/application-{Date}.log"
   },
   "Upload": {
-    "PathFormat": "Upload/{FileName}"
+    "PathFormat": "Upload/{Name}"
   },
   "AllowedHosts": "*"
 }
