--- a/src/ILICheck.Web/appsettings.Production.json
+++ b/src/ILICheck.Web/appsettings.Production.json
@@ -5,9 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     },
-    "PathFormat": "Logs/application-{Date}.log"
+    "PathFormat": "/logs/application-{Date}.log"
   },
   "Upload": {
-    "PathFormat": "Uploads/{Name}"
+    "PathFormat": "/uploads/{Name}"
   }
 }
