--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,10 @@
 [Rr]eleases/
 x64/
 x86/
-build/
-assets/
+[Bb]uild/
+[Aa]ssets/
+[Ll]ogs/
+[Uu]ploads/
 bld/
 bin/
 Bin/
@@ -181,7 +183,7 @@ ClientBin/
 *.publishsettings
 orleans.codegen.cs
 
-/node_modules
+**/node_modules
 
 # RIA/Silverlight projects
 Generated_Code/
@@ -231,6 +233,3 @@ _Pvt_Extensions
 
 # FAKE - F# Make
 .fake/
-src/ILICheck.Web/ClientApp/node_modules/
-src/ILICheck.Web/Logs/
-src/ILICheck.Web/Upload/
