--- a/.editorconfig
+++ b/.editorconfig
@@ -112,7 +112,7 @@ dotnet_diagnostic.CA1714.severity = warning
 dotnet_diagnostic.CA1715.severity = warning
 dotnet_diagnostic.CA1719.severity = warning
 dotnet_diagnostic.CA1722.severity = warning
-dotnet_diagnostic.CA1724.severity = warning
+dotnet_diagnostic.CA1724.severity = none
 dotnet_diagnostic.CA1800.severity = warning
 dotnet_diagnostic.CA1801.severity = warning
 dotnet_diagnostic.CA1802.severity = warning
