--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,5 +59,5 @@ jobs:
             REVISION=${{ env.REVISION }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ env.IMAGE_NAME }}
+          cache-from: type=registry,ref=${{ env.IMAGE_NAME }}:edge
           cache-to: type=inline
