--- a/src/ILICheck.Web/appsettings.Development.json
+++ b/src/ILICheck.Web/appsettings.Development.json
@@ -9,5 +9,8 @@
   },
   "Upload": {
     "PathFormat": "Uploads/{Name}"
+  },
+  "Validation": {
+    "ProcessExecutable":  "powershell.exe"
   }
 }
