--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,9 @@ services:
     #   - image: ghcr.io/geowerkstatt/interlis-check-service:v1
     #     Stable tag for a specific major version
     #
+    #   - image: ghcr.io/geowerkstatt/interlis-check-service:v1.2.3
+    #     Stable tag for a specific version
+    #
     #   - image: ghcr.io/geowerkstatt/interlis-check-service:latest
     #     Points to the latest stable tag, no matter what the current major version is
     #     May contain breaking changes and incompatibilities
