--- a/src/ILICheck.Web/appsettings.Production.json
+++ b/src/ILICheck.Web/appsettings.Production.json
@@ -11,6 +11,6 @@
     "PathFormat": "/uploads/{Name}"
   },
   "Validation": {
-    "ProcessExecutable": "/bin/bash"
+    "ShellExecutable": "/bin/bash"
   }
 }
