Add Commandprefix and UploadFolderInContainer to config

--- a/src/ILICheck.Web/appsettings.Development.json
+++ b/src/ILICheck.Web/appsettings.Development.json
@@ -11,6 +11,8 @@
     "PathFormat": "Uploads/{Name}"
   },
   "Validation": {
-    "ProcessExecutable":  "powershell.exe"
+    "ShellExecutable": "powershell.exe",
+    "UploadFolderInContainer": "/uploads/{Name}",
+    "CommandPrefix": "docker compose exec --user abc web bash -l "
   }
 }
