--- a/src/ILICheck.Web/appsettings.Production.json
+++ b/src/ILICheck.Web/appsettings.Production.json
@@ -11,6 +11,8 @@
     "PathFormat": "/uploads/{Name}"
   },
   "Validation": {
-    "ShellExecutable": "/bin/bash"
+    "ShellExecutable": "/bin/bash",
+    "UploadFolderInContainer": "/uploads/{Name}",
+    "CommandPrefix": ""
   }
 }
