--- a/src/ILICheck.Web/ClientApp/public/manifest.json
+++ b/src/ILICheck.Web/ClientApp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "ILICheck.Web",
-  "name": "ILICheck.Web",
+  "short_name": "ILICheck",
+  "name": "INTERLIS Web-Check-Service",
   "icons": [
     {
       "src": "favicon.ico",
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     }
   ],
-  "start_url": "./Index.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
