--- a/src/ILICheck.Web/ClientApp/package.json
+++ b/src/ILICheck.Web/ClientApp/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.4",
     "react-icons": "^4.2.0",
+    "react-markdown": "^7.1.1",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
