--- a/tests/ILICheck.Web.Test/ILICheck.Web.Test.csproj
+++ b/tests/ILICheck.Web.Test/ILICheck.Web.Test.csproj
@@ -5,7 +5,7 @@
 
     <IsPackable>false</IsPackable>
 
-    <AssemblyName>ILICheck.Web</AssemblyName>
+    <AssemblyName>ILICheck.Web.Test</AssemblyName>
 
     <RootNamespace>ILICheck.Web</RootNamespace>
   </PropertyGroup>
@@ -14,6 +14,12 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.8" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\ILICheck.Web\ILICheck.Web.csproj">
+      <CopyLocal></CopyLocal>
+    </ProjectReference>
   </ItemGroup>
 
 </Project>
