--- a/src/ILICheck.Web/ClientApp/package.json
+++ b/src/ILICheck.Web/ClientApp/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^5.0.0",
+    "license-checker": "^25.0.1"
   }
 }
