--- a/.editorconfig
+++ b/.editorconfig
@@ -214,6 +214,7 @@ dotnet_diagnostic.CA2240.severity = warning
 dotnet_diagnostic.CA2241.severity = warning
 dotnet_diagnostic.CA2242.severity = warning
 dotnet_diagnostic.CA2243.severity = warning
+dotnet_diagnostic.CA2254.severity = none
 dotnet_diagnostic.CA5122.severity = warning
 dotnet_diagnostic.CA1031.severity = none
 dotnet_diagnostic.CA1062.severity = none
