Disable xml comment analysis for test project
Fixes build error SA0001: XML comment analysis is disabled due to project configuration

--- a/tests/.editorconfig
+++ b/tests/.editorconfig
@@ -15,3 +15,4 @@
 # Configure code analysis according to current standards by default.
 [*.cs]
 dotnet_diagnostic.CA1001.severity = none
+dotnet_diagnostic.SA0001.severity = none
