--- a/src/ILICheck.Web/ClientApp/package.json
+++ b/src/ILICheck.Web/ClientApp/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^5.0.2",
+    "bootstrap": "^5.2.0-beta1",
     "dayjs": "^1.10.6",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
