Support additional catalogue files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,7 @@ services:
       - ./src/ILICheck.Web/Logs:/logs
       - ./src/ILICheck.Web/Uploads:/uploads
       - ./src/ILICheck.Web/Config:/config
+      - ./src/ILICheck.Web/Catalogs:/catalogs
       - ./src/ILICheck.Web/Models:/models
       - ./src/ILICheck.Web/Plugins:/plugins
       - ./src/ILICheck.Web/Web-Assets:/web-assets
