--- a/src/ILICheck.Web/ClientApp/package.json
+++ b/src/ILICheck.Web/ClientApp/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^5.2.0-beta1",
-    "dayjs": "^1.10.6",
+    "bootstrap": "^5.2.3",
+    "dayjs": "^1.11.7",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
+    "react-bootstrap": "^1.6.6",
     "react-dom": "^17.0.2",
-    "react-dropzone": "^11.3.4",
-    "react-icons": "^4.2.0",
-    "react-markdown": "^7.1.1",
-    "styled-components": "^5.3.0",
+    "react-dropzone": "^11.7.1",
+    "react-icons": "^4.7.1",
+    "react-markdown": "^7.1.2",
+    "styled-components": "^5.3.6",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -50,15 +50,15 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "^5.0.0",
-    "license-checker": "^25.0.1",
-    "eslint": "^7.25.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-config-react-app": "^6.0.0",
-    "eslint-plugin-flowtype": "^5.7.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.23.2"
+    "eslint-plugin-flowtype": "^5.10.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "license-checker": "^25.0.1",
+    "react-scripts": "^5.0.1"
   }
 }
