Add support for local ili models files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,9 @@ services:
     #   - /path/to/config:/config
     #     Config folder with TOML files to control validation
     #
+    #   - /path/to/models:/models
+    #     Folder containing optional ili files
+    #
     #   - /path/to/web-assets:/web-assets
     #     Folder containing optional custom web assets
     #     examples: - favicon.ico
@@ -61,6 +64,7 @@ services:
       - ./src/ILICheck.Web/Logs:/logs
       - ./src/ILICheck.Web/Uploads:/uploads
       - ./src/ILICheck.Web/Config:/config
+      - ./src/ILICheck.Web/Models:/models
       - ./src/ILICheck.Web/Web-Assets:/web-assets
     # Add environment variables
     #
@@ -103,7 +107,7 @@ services:
     #     Optional, Enable validation trace messages, Default false
     #
     #   - ILIVALIDATOR_MODEL_DIR=https://models.example.com;http://models.interlis.ch/
-    #     Optional semicolon-separated list of repositories with ili-files
+    #     Optional semicolon-separated list of external repositories with ili-files
     #     Default http://models.interlis.ch/
     #
     #   - ENABLE_GPKG_VALIDATION=true
