--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,9 @@ services:
     #   - /path/to/models:/models
     #     Folder containing optional ili files
     #
+    #   - /path/to/plugins:/plugins
+    #     Folder containing optional ilivalidator plugins (jar files)
+    #
     #   - /path/to/web-assets:/web-assets
     #     Folder containing optional custom web assets
     #     examples: - favicon.ico
@@ -65,6 +68,7 @@ services:
       - ./src/ILICheck.Web/Uploads:/uploads
       - ./src/ILICheck.Web/Config:/config
       - ./src/ILICheck.Web/Models:/models
+      - ./src/ILICheck.Web/Plugins:/plugins
       - ./src/ILICheck.Web/Web-Assets:/web-assets
     # Add environment variables
     #
