Add tests for xtf log parser

--- a/tests/ILICheck.Web.Test/ILICheck.Web.Test.csproj
+++ b/tests/ILICheck.Web.Test/ILICheck.Web.Test.csproj
@@ -45,6 +45,15 @@
     <None Update="testdata\invalid.xtf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="testdata\xtflog\invalid.xtf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="testdata\xtflog\empty.xtf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="testdata\xtflog\valid.xtf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
