--- a/src/ILICheck.Web/ClientApp/package.json
+++ b/src/ILICheck.Web/ClientApp/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.7",
+    "object.groupby": "^1.0.3",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.6",
     "react-dom": "^17.0.2",
