Run frontend tests in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,3 +41,7 @@ jobs:
       - name: Lint frontend
         working-directory: ./src/ILICheck.Web/ClientApp
         run: npm run lint
+
+      - name: Test frontend
+        working-directory: ./src/ILICheck.Web/ClientApp
+        run: npm run test
