Project LV95 coordinates to WGS84 for GeoJSON

--- a/src/ILICheck.Web/ILICheck.Web.csproj
+++ b/src/ILICheck.Web/ILICheck.Web.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotSpatial.Projections" Version="4.0.656" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="7.0.2" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.2" />
