--- a/src/ILICheck.Web/appsettings.Development.json
+++ b/src/ILICheck.Web/appsettings.Development.json
@@ -9,6 +9,6 @@
   },
   "Validation": {
     "ShellExecutable": "powershell.exe",
-    "CommandFormat": "docker compose exec --user abc web bash -l -c '{0}'"
+    "CommandFormat": "docker compose exec --user app web bash -l -c '{0}'"
   }
 }
