--- a/tests/.editorconfig
+++ b/tests/.editorconfig
@@ -15,4 +15,5 @@
 # Configure code analysis according to current standards by default.
 [*.cs]
 dotnet_diagnostic.CA1001.severity = none
+dotnet_diagnostic.CA1861.severity = none
 dotnet_diagnostic.SA0001.severity = none
