--- a/.editorconfig
+++ b/.editorconfig
@@ -228,7 +228,7 @@ dotnet_diagnostic.CA2227.severity = none
 dotnet_diagnostic.CA1303.severity = none
 dotnet_diagnostic.SA0000.severity = warning
 dotnet_diagnostic.SA1101.severity = none
-dotnet_diagnostic.SA1116.severity = none
+dotnet_diagnostic.SA1116.severity = warning
 dotnet_diagnostic.SA1118.severity = none
 dotnet_diagnostic.SA1122.severity = none
 dotnet_diagnostic.SA1200.severity = none
