--- a/.editorconfig
+++ b/.editorconfig
@@ -256,4 +256,4 @@ dotnet_diagnostic.SA1624.severity = none
 dotnet_diagnostic.SA1633.severity = none
 dotnet_diagnostic.SA1639.severity = warning
 dotnet_diagnostic.SA1642.severity = none
-dotnet_diagnostic.SA1649.severity = none
+dotnet_diagnostic.SA1649.severity = warning
