--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -28,6 +28,8 @@ jobs:
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
+        env:
+          TRIVY_DB_REPOSITORY: public.ecr.aws/aquasecurity/trivy-db:2 # Addresses https://github.com/aquasecurity/trivy-action/issues/389
         with:
           image-ref: 'ghcr.io/geowerkstatt/interlis-check-service:${{ github.sha }}'
           format: 'template'
