Add write permission to contents
So that the SBOM can be attached to the GitHub release.

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -16,7 +16,7 @@ jobs:
     name: Build and push Docker image and create a new GitHub pre-release
     permissions:
       id-token: write
-      contents: read
+      contents: write
       attestations: write
       packages: write
 
