--- a/.editorconfig
+++ b/.editorconfig
@@ -242,6 +242,8 @@ dotnet_diagnostic.SA1501.severity = none
 dotnet_diagnostic.SA1503.severity = none
 dotnet_diagnostic.SA1504.severity = none
 dotnet_diagnostic.SA1516.severity = none
+dotnet_diagnostic.SA1515.severity = warning
+dotnet_diagnostic.SA1516.severity = warning
 dotnet_diagnostic.SA1600.severity = none
 dotnet_diagnostic.SA1601.severity = none
 dotnet_diagnostic.SA1602.severity = none
