Update correct url name in all readmes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,9 +111,9 @@ services:
     #   - ILIVALIDATOR_ENABLE_TRACE=true
     #     Optional, Enable validation trace messages, Default false
     #
-    #   - ILIVALIDATOR_MODEL_DIR=https://models.example.com;http://models.interlis.ch/
+    #   - ILIVALIDATOR_MODEL_DIR=https://models.example.com;https://models.interlis.ch/
     #     Optional semicolon-separated list of external repositories with ili-files
-    #     Default http://models.interlis.ch/
+    #     Default https://models.interlis.ch/
     #
     #   - ENABLE_GPKG_VALIDATION=true
     #     Optional, Default false
