Add library to parse User Agent string in HTTP Header (they be messy)

--- a/src/ILICheck.Web/ILICheck.Web.csproj
+++ b/src/ILICheck.Web/ILICheck.Web.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.7.1" />
+    <PackageReference Include="UAParser" Version="3.1.47" />
   </ItemGroup>
 
   <ItemGroup>
