--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,14 +63,14 @@ services:
     #                 Adding this document means the user must agree to the terms prior validation
     #               - quickstart.txt (line-separated brief instructions as plain text document)
     volumes:
-      - ./src/ILICheck.Web/Logs:/logs
-      - ./src/ILICheck.Web/Uploads:/uploads
-      - ./src/ILICheck.Web/Config:/config
-      - ./src/ILICheck.Web/Catalogues:/catalogues
-      - ./src/ILICheck.Web/Models:/models
-      - ./src/ILICheck.Web/Ilitools:/ilitools
-      - ./src/ILICheck.Web/Plugins:/plugins
-      - ./src/ILICheck.Web/Web-Assets:/web-assets
+      - ./src/Ilicop.Web/Logs:/logs
+      - ./src/Ilicop.Web/Uploads:/uploads
+      - ./src/Ilicop.Web/Config:/config
+      - ./src/Ilicop.Web/Catalogues:/catalogues
+      - ./src/Ilicop.Web/Models:/models
+      - ./src/Ilicop.Web/Ilitools:/ilitools
+      - ./src/Ilicop.Web/Plugins:/plugins
+      - ./src/Ilicop.Web/Web-Assets:/web-assets
     # Add environment variables
     #
     # environment:
