--- a/tests/Ilicop.Web.Test/Ilicop.Web.Test.csproj
+++ b/tests/Ilicop.Web.Test/Ilicop.Web.Test.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="testdata\ilitools\ili2gpkg\1.2.100\**" />
+    <EmbeddedResource Remove="testdata\ilitools\ili2gpkg\1.2.100\**" />
+    <None Remove="testdata\ilitools\ili2gpkg\1.2.100\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.10.1" />
@@ -31,10 +37,34 @@
     <None Update="testdata\example_log.xtf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="testdata\ilitools\ili2gpkg\1.20.29\placeholder">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="testdata\ilitools\ili2gpkg\5.5.5\placeholder">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="testdata\ilitools\ili2gpkg\7.6.1\placeholder">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="testdata\ilitools\ili2gpkg\7.7.7\placeholder">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="testdata\ilitools\ilivalidator\5.10.9\placeholder">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="testdata\ilitools\ilivalidator\5.2.9\placeholder">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="testdata\ilitools\KIMBOHUNT\GILGAMESHGIRAFFE\placeholder">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="testdata\invalid.gpkg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="testdata\invalid.xtf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="testdata\mock.zip">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="testdata\xtflog\invalid.xtf">
