--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  GH_TOKEN: ${{ secrets.TEAMCITY_BOT_TOKEN }}
+  GH_TOKEN: ${{ secrets.GEOW_BOT_TOKEN }}
   TAG_NAME: ${{ github.event.inputs.TAG_NAME || github.event.release.tag_name }}
 
 jobs:
