Add configuration for local model repository
And move ilitools classes to root because the ilitools folder is already used for other stuff.

GH-268

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,12 +56,16 @@ services:
     #               - nutzungsbestimmungen.md (terms of use as Markdown-formatted document)
     #                 Adding this document means the user must agree to the terms prior validation
     #               - quickstart.txt (line-separated brief instructions as plain text document)
+    #
+    #   - /path/to/local/model/repository:/repository
+    #     Folder containing the local model repository
     volumes:
       - ./src/Ilicop.Web/Logs:/logs
       - ./src/Ilicop.Web/Uploads:/uploads
       - ./src/Ilicop.Web/Ilitools:/ilitools
       - ./src/Ilicop.Web/Plugins:/plugins
       - ./src/Ilicop.Web/Web-Assets:/web-assets
+      - ./data/repositories/multi_profile:/model-repository
     # Add environment variables
     #
     # environment:
