Add ".Web" to RootNamespace

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -11,7 +11,7 @@
     <RepositoryUrl>https://github.com/geowerkstatt/interlis-check-service.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <AnalysisLevel>8.0-recommended</AnalysisLevel>
-    <RootNamespace>Geowerkstatt.Ilicop</RootNamespace>
+    <RootNamespace>Geowerkstatt.Ilicop.Web</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
